# while-lang

./: .gitignore  Interpreter.hs  Main.hs  Parser.hs  ParserLib.hs  README.org  cabal.project  while-lang.cabal
app/: Interpreter.hs  Main.hs  Parser.hs  ParserLib.hs
examples/: div.whl  isqrt.whl  log2.whl
