cabal-version:      3.0
name:               while-lang

version:            0.1.0.0

build-type:         Simple

extra-doc-files:    README.org

extra-source-files: examples/*.whl

common warnings
    ghc-options: -Wall

executable while-lang
    import:           warnings

    main-is:          Main.hs

    other-modules:    Interpreter,
                      Parser

    -- other-extensions:

    build-depends:    base ^>=4.17.2.1,
                      ParserLib <=1.0.0.0

    hs-source-dirs:   app

    default-language: Haskell2010
